syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zzh.grpc.message.hello";
option java_outer_classname = "HelloProto";
option objc_class_prefix = "RTG";


package greet;

service Greet{
    rpc sayHello(HelloReply) returns(HelloResp){}
}

message HelloReply {
    string name = 1;
}

message HelloResp {

    string result = 1;
}